<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Common -->
    <string name="app_name">Scouting Manager</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Titles -->
    <string name="title_team_scout">Team Scout</string>
    <string name="title_match_scout">Match Scout</string>

    <!-- Team List -->
    <string name="toggle_off_team">Team</string>
    <string name="toggle_on_match">Match</string>
    <string name="message_no_teams">No teams!</string>
    <string name="message_no_matches">No matches!</string>

    <!-- Dialogs -->
    <string name="title_add_team">Add Team</string>
    <string name="title_add_match">Add Match</string>

    <plurals name="title_delete_teams">
        <item quantity="one">Delete team?</item>
        <item quantity="other">Delete teams?</item>
    </plurals>
    <plurals name="message_delete_teams">
        <item quantity="one">One team will be deleted.</item>
        <item quantity="other">%d teams will be deleted.</item>
    </plurals>
    <plurals name="title_delete_matches">
        <item quantity="one">Delete match?</item>
        <item quantity="other">Delete matches?</item>
    </plurals>
    <plurals name="message_delete_matches">
        <item quantity="one">One match will be deleted.</item>
        <item quantity="other">%d matches will be deleted.</item>
    </plurals>

    <string name="title_delete_database">Delete Database</string>
    <string name="message_delete_database">All data in the database will be deleted. This cannot be undone.</string>

    <!-- Menu -->
    <string name="menu_add_team">Add Team</string>
    <string name="menu_add_match">Add Match</string>
    <string name="menu_delete_team">Delete Team</string>
    <string name="menu_delete_match">Delete Match</string>
    <string name="menu_search">Search</string>
    <string name="menu_match_number_hint">Match #</string>
    <string name="menu_search_team_hint">Search for team…</string>
    <string name="menu_export">Export to CSV</string>
    <string name="menu_take_picture">Take Picture</string>
    <string name="menu_delete_picture">Delete Picture</string>
    <string name="menu_clear_screen">Clear Screen</string>
    <string name="menu_share">Share</string>
    <string name="menu_purge_all">Delete All Data</string>

    <plurals name="title_selected_teams">
        <item quantity="one">1 team selected</item>
        <item quantity="other"><xliff:g id="num_teams">%1$d</xliff:g> teams selected</item>
    </plurals>

    <!-- Disk Storage -->
    <string name="export_dir_name">scouting_manager</string>
    <string name="export_teams_file_name">teams</string>
    <string name="export_matches_file_name">matches</string>
    <string name="export_not_mounted">External storage not mounted.</string>
    <string name="export_success">Data written to external storage.</string>
    <string name="export_failed">Could not export data.</string>
    <string name="share_scouting_data">Share scouting data…</string>
    <string name="no_data_to_share">No data to share.</string>

    <!-- Camera -->
    <string name="camera_storage_directory_name">team_pictures</string>
    <string name="camera_take_picture_failed">Unable to take team picture.</string>

    <!-- Team Scout -->
    <string name="team_name">Team name</string>
    <string name="team_rank">Rank</string>
    <string name="score">Score</string>
    <string name="low">Low</string>
    <string name="middle">Middle</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="climb">Climb</string>
    <string name="level_one">Level 1</string>
    <string name="level_two">Level 2</string>
    <string name="level_three">Level 3</string>
    <string name="helps_climb">Helps Climb</string>
    <string name="drive_train">Drive Train</string>
    <string name="drive_train_other">Other?</string>
    <string name="driving_gears">Driving Gears</string>
    <string name="one">One</string>
    <string name="multiple">Multiple</string>

    <string-array name="drive_options">
        <item>None</item>
        <item>4 Wheels</item>
        <item>6 Wheels</item>
        <item>8 Wheels</item>
        <item>Tank Tread</item>
        <item>Kiwi</item>
        <item>Mecanum</item>
        <item>Swerve/crab</item>
        <item>Other</item>
    </string-array>

    <string name="wheel_type">Wheel Type</string>

    <string-array name="wheel_options">
        <item>None</item>
        <item>KoP</item>
        <item>Plaction/traction</item>
        <item>Pneumatic</item>
        <item>Mecanum</item>
        <item>Other</item>
    </string-array>

    <string name="goes_under_tower">Goes Under Tower</string>

    <!-- Match Scout -->
    <string name="num_hits">Hits</string>
    <string name="num_miss">Misses</string>
    <string name="hit">Hit</string>
    <string name="miss">Miss</string>
    <string name="zero">0</string>
    <string name="high_basket">High Goal</string>
    <string name="medium_basket">Medium Goal</string>
    <string name="low_basket">Low Goal</string>
    <string name="tower_basket">Tower Goal</string>
    <string name="tower_level">Tower Climbing</string>
    <string name="fell_off_tower">Fell Off Tower?</string>
    <string name="shoots_from_where">Shoots From Where?</string>
    <string name="shoots_from_where_hint">Shoots From Where?</string>
    <string name="human_player_ability">Human Player Ability</string>
    <string name="high_scoring">High Scoring</string>
    <string name="impedes_performance">Impedes Performance</string>
    <string name="frisbees_from_where">Frisbees From Where?</string>
    <string name="feeder">Feeder</string>
    <string name="floor">Floor</string>
    <string name="strategy">Strategy</string>
    <string name="offense">Offense</string>
    <string name="defense">Defense</string>
    <string name="neutral">Neutral</string>
    <string name="speed">Speed/Agility</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="excellent">Excellent</string>
    <string name="average">Average</string>
    <string name="fair">Fair</string>
    <string name="not_available">N/A</string>
    <string name="maneuverability">Maneuverability</string>
    <string name="penalty">Penalty</string>
    <string name="comments">Additional comments</string>

</resources>