<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/team_input_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <RelativeLayout
            android:id="@+id/team_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/team_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/picture_frame"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_contact_picture"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/team_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/team_picture"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/team_picture"
                android:hint="@string/team_rank"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/team_rank"
                android:layout_alignLeft="@id/team_rank"
                android:hint="@string/team_name"
                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:textSize="24sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textview_score"
            style="@style/team_input_main_header"
            android:text="@string/score" />

        <LinearLayout
            style="@style/team_input_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkbox_low_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low" />

            <CheckBox
                android:id="@+id/checkbox_mid_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle" />

            <CheckBox
                android:id="@+id/checkbox_high_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_climb"
            style="@style/team_input_main_header"
            android:text="@string/climb" />

        <LinearLayout
            style="@style/team_input_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkbox_level_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_one" />

            <CheckBox
                android:id="@+id/checkbox_level_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_two" />

            <CheckBox
                android:id="@+id/checkbox_level_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_three" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_helps_climb"
            style="@style/team_input_main_header"
            android:text="@string/helps_climb" />

        <include layout="@layout/compat_helps_climb" />

        <TextView
            android:id="@+id/textview_driving_gears"
            style="@style/team_input_main_header"
            android:text="@string/driving_gears" />

        <include layout="@layout/compat_driving_gears" />

        <TextView
            android:id="@+id/textview_drive_train"
            style="@style/team_input_main_header"
            android:text="@string/drive_train" />

        <Spinner
            android:id="@+id/spinner_drive_train"
            style="@style/team_input_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/drive_options" />

       	<EditText
            android:id="@+id/edittext_drive_train_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/drive_train_other" 
            android:enabled="false" />
        
        <TextView
            android:id="@+id/textview_wheel_type"
            style="@style/team_input_main_header"
            android:text="@string/wheel_type" />

        <Spinner
            android:id="@+id/spinner_wheel_type"
            style="@style/team_input_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/wheel_options" />

        <TextView
            android:id="@+id/textview_goes_under_tower"
            style="@style/team_input_main_header"
            android:text="@string/goes_under_tower" />

        <include layout="@layout/compat_goes_under_tower" />
    </LinearLayout>

</ScrollView>