<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal" >

        <!-- High Basket -->

        <TextView
            android:id="@+id/high_basket_header"
            style="@style/match_basket_header"
            android:text="@string/high_basket" />

        <TextView
            android:id="@+id/num_hits_header"
            style="@style/match_basket_header"
            android:layout_alignBaseline="@id/high_basket_header"
            android:layout_marginLeft="80dp"
            android:layout_toRightOf="@id/high_basket_header"
            android:text="@string/num_hits" />

        <TextView
            android:id="@+id/num_misses_header"
            style="@style/match_basket_header"
            android:layout_alignBaseline="@id/high_basket_header"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/num_hits_header"
            android:text="@string/num_miss" />

        <Button
            android:id="@+id/button_shots_hit_high"
            style="@style/match_button_hit"
            android:layout_alignLeft="@id/high_basket_header"
            android:layout_below="@id/high_basket_header" />

        <Button
            android:id="@+id/button_shots_miss_high"
            style="@style/match_button_miss"
            android:layout_alignBaseline="@id/button_shots_hit_high"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/button_shots_hit_high" />

        <EditText
            android:id="@+id/edittext_shots_hit_high"
            style="@style/match_basket_counter"
            android:layout_alignBaseline="@id/button_shots_hit_high"
            android:layout_alignLeft="@id/num_hits_header"
            android:layout_toRightOf="@id/button_shots_miss_high" />

        <EditText
            android:id="@+id/edittext_shots_miss_high"
            style="@style/match_basket_counter"
            android:layout_alignBaseline="@id/button_shots_hit_high"
            android:layout_alignLeft="@id/num_misses_header"
            android:layout_toRightOf="@id/edittext_shots_hit_high" />

        <!-- Medium Basket -->

        <TextView
            android:id="@+id/medium_basket_header"
            style="@style/match_basket_header"
            android:layout_below="@id/button_shots_hit_high"
            android:layout_marginTop="16dp"
            android:text="@string/medium_basket" />

        <Button
            android:id="@+id/button_shots_hit_medium"
            style="@style/match_button_hit"
            android:layout_alignLeft="@id/button_shots_hit_high"
            android:layout_below="@id/medium_basket_header" />

        <Button
            android:id="@+id/button_shots_miss_medium"
            style="@style/match_button_miss"
            android:layout_alignBaseline="@id/button_shots_hit_medium"
            android:layout_alignLeft="@id/button_shots_miss_high" />

        <EditText
            android:id="@+id/edittext_shots_hit_medium"
            style="@style/match_basket_counter"
            android:layout_alignBaseline="@id/button_shots_hit_medium"
            android:layout_alignLeft="@id/edittext_shots_hit_high" />

        <EditText
            android:id="@+id/edittext_shots_miss_medium"
            style="@style/match_basket_counter"
            android:layout_alignBaseline="@id/button_shots_hit_medium"
            android:layout_alignLeft="@id/edittext_shots_miss_high" />

        <!-- Low Basket -->

        <TextView
            android:id="@+id/low_basket_header"
            style="@style/match_basket_header"
            android:layout_below="@id/button_shots_hit_medium"
            android:layout_marginTop="16dp"
            android:text="@string/low_basket" />

        <Button
            android:id="@+id/button_shots_hit_low"
            style="@style/match_button_hit"
            android:layout_alignLeft="@id/button_shots_hit_high"
            android:layout_below="@id/low_basket_header" />

        <Button
            android:id="@+id/button_shots_miss_low"
            style="@style/match_button_miss"
            android:layout_alignBaseline="@id/button_shots_hit_low"
            android:layout_alignLeft="@id/button_shots_miss_high" />

        <EditText
            android:id="@+id/edittext_shots_hit_low"
            style="@style/match_basket_counter"
            android:layout_alignBaseline="@id/button_shots_hit_low"
            android:layout_alignLeft="@id/edittext_shots_hit_medium" />

        <EditText
            android:id="@+id/edittext_shots_miss_low"
            style="@style/match_basket_counter"
            android:layout_alignBaseline="@id/button_shots_hit_low"
            android:layout_alignLeft="@id/edittext_shots_miss_high" />

        <!-- Speed/Agility Basket -->

        <TextView
            android:id="@+id/tower_basket_header"
            style="@style/match_basket_header"
            android:layout_below="@id/button_shots_hit_low"
            android:layout_marginTop="16dp"
            android:text="@string/tower_basket" />

        <Button
            android:id="@+id/button_shots_hit_tower"
            style="@style/match_button_hit"
            android:layout_alignLeft="@id/button_shots_hit_high"
            android:layout_below="@id/tower_basket_header" />

        <Button
            android:id="@+id/button_shots_miss_tower"
            style="@style/match_button_miss"
            android:layout_alignBaseline="@id/button_shots_hit_tower"
            android:layout_alignLeft="@id/button_shots_miss_high" />

        <EditText
            android:id="@+id/edittext_shots_hit_tower"
            style="@style/match_basket_counter"
            android:layout_alignBaseline="@id/button_shots_hit_tower"
            android:layout_alignLeft="@id/edittext_shots_hit_low" />

        <EditText
            android:id="@+id/edittext_shots_miss_tower"
            style="@style/match_basket_counter"
            android:layout_alignBaseline="@id/button_shots_hit_tower"
            android:layout_alignLeft="@id/edittext_shots_miss_high" />
    </RelativeLayout>

</ScrollView>